Add kanban & class diagram for submission

--- a/P3Deliverables/P3.md
+++ b/P3Deliverables/P3.md
@@ -5,13 +5,13 @@ The user stories and tasks can be found on GitHub
 
 ## Kanban Board
 
-Add photo of Kanban board
+![](kanban.png)
 
 ## Design Artifacts
 
 The source file for our CRC cards can be found [here](https://docs.google.com/document/d/1QvapYqn3FcKuRy45nCooyzQOYaSvrWr5oXBb_wnxAsA/edit?usp=sharing)
 
-Add photo of class diagram
+![](class-diagram.jpeg)
 
 ## Source Code
 The source code can be found on GitHub
