--- a/P3Deliverables/P3.md
+++ b/P3Deliverables/P3.md
@@ -36,3 +36,6 @@ The source file for our traceability matrix can be found [here](https://docs.goo
   - How to start a new project from a high level specification.  
   - How to research and select techniques, languages and tools to use to complete the project.
   - How to work and negotiate with others to arrive at a consensus.
+
+## Presentation
+Presentation slides can be found in the P3Deliverables folder on GitHub
